--- a/elandsystems/intro.html
+++ b/elandsystems/intro.html
@@ -13,7 +13,7 @@
 		<div class="inner">
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="메인로고" /></a></h1>
 			<ul id="topmenu">
-				<li><a href="#">채용</a></li>
+				<li><a href="#" title="채용 바로가기">채용</a></li>
 				<li><a href="#">CONTACT US</a></li>
 				<li><a href="#">SITEMAP</a></li>
 				<li>
